Added recommendation feature

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <option value="rest">Rest of the world</option>
             </select>
           </div>
-          <div class="recommendation">
+          <div class="recommendation hidden">
             <p class="recommendation-title">Tip recommendation:</p>
             <p class="recommendation-text">
               In the United States tipping in a restaurant is required. The
@@ -81,13 +81,13 @@
           </div>
           <div class="tip-per-person-container hidden">
             <p class="tip-per-person-text active-tip">
-              Tip per person <span class="tip-per-person">-</span>
+              Tip per person: <span class="tip-per-person">-</span>
               <span class="currency">$</span>
             </p>
           </div>
           <div class="total-per-person-container hidden">
             <p class="total-per-person-text">
-              Total per person <span class="total-per-person">-</span>
+              Total per person: <span class="total-per-person">-</span>
               <span class="currency">$</span>
             </p>
           </div>
